max-width doesn't work the same as on safari...problem fixed

--- a/css/basic.css
+++ b/css/basic.css
@@ -102,7 +102,7 @@ ul#links li:hover {
 }
 
 .proj {
-	max-width: 270%;
+	width: 270%;
 }
 
 #select > #about {
